[Isseu#12] Create auth module + add settings to require authen on show password

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -84,5 +84,8 @@
     "edit": "Edit",
     "language": "Language",
     "langEn": "English",
-    "langVn": "Vietnamese"
+    "langVn": "Vietnamese",
+    "settingsAlwaysShow": "Always show account name and password",
+    "settingsAlwaysAuthen": "Always require authen to see password",
+    "errorPassIncorrect": "Password incorrect"
 }
