[Issue#46] Allow undo delete password

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -86,5 +86,6 @@
     "langVn": "Vietnamese",
     "settingsAlwaysShow": "Always show account name and password",
     "settingsAlwaysAuthen": "Always require authen to see password",
-    "errorPassIncorrect": "Password incorrect"
+    "errorPassIncorrect": "Password incorrect",
+    "undo": "undo"
 }
