--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -101,5 +101,7 @@
     "saveInfoHintName": "Name (Jenny phone number)",
     "saveInfoHintDesc": "Info (+8411111111)",
     "saveInfoError": "Some fields are empty",
-    "sbEditInfoSuccess": "Info updated successfully"
+    "sbEditInfoSuccess": "Info updated successfully",
+    "prefRequirePassOnForeground": "Require password when opening app from background to improve security.",
+    "authenReasonRequirePassOnForeground": "The app requires password after inactive use to improve security. You can turn this behaviour off in Preference page"
 }
